--- a/src/main/resources/spring-frontend/about.html
+++ b/src/main/resources/spring-frontend/about.html
@@ -17,12 +17,12 @@
     <script defer src="/assets/js/scripts.min.js?v=74020866"></script>
 </head>
 <body class="Site">
-<footer th:replace="~{fragments/footer_fragment :: footFragment}" ></footer>
+<header th:replace="~{fragments/header_fragment :: headFragment}"></header>
 <div class="Middle">
     <div class="wrap">
         <main class="Middle-main">
-            <ul class="breadcrumbs"
-                th:replace="~{fragments/breadcrumb_fragment :: breadcrumps(category='О компании')}"></ul>
+<!--            <ul class="breadcrumbs"-->
+<!--                th:replace="~{fragments/breadcrumb_fragment :: breadcrumps(category='О компании')}"></ul>-->
             <h1 class="Middle-title">О компании
             </h1>
             <article class="Article">
