--- a/src/main/resources/spring-frontend/cart.html
+++ b/src/main/resources/spring-frontend/cart.html
@@ -39,7 +39,7 @@
           | браузера здесь&nbsp;
       | для правильного отображения сайта.
   -->
-  <footer th:replace="~{fragments/footer_fragment :: footFragment}" ></footer>
+  <header th:replace="~{fragments/header_fragment :: headFragment}"></header>
   <div class="Middle">
     <div class="wrap">
       <main class="Middle-main">
