--- a/src/main/resources/spring-frontend/contacts.html
+++ b/src/main/resources/spring-frontend/contacts.html
@@ -28,8 +28,8 @@
     </div>
     <div class="wrap">
         <main class="Middle-main">
-            <ul class="breadcrumbs"
-                th:replace="~{fragments/breadcrumb_fragment :: breadcrumps(category='Контакты')}"></ul>
+<!--            <ul class="breadcrumbs"-->
+<!--                th:replace="~{fragments/breadcrumb_fragment :: breadcrumps(category='Контакты')}"></ul>-->
             <div class="Contacts">
                 <div class="row">
                     <div class="row-block">
