--- a/src/main/resources/spring-frontend/faq.html
+++ b/src/main/resources/spring-frontend/faq.html
@@ -22,8 +22,8 @@
 <div class="Middle">
     <div class="wrap">
         <main class="Middle-main">
-            <ul class="breadcrumbs"
-                th:replace="~{fragments/breadcrumb_fragment :: breadcrumps(category='Помощь')}"></ul>
+<!--            <ul class="breadcrumbs"-->
+<!--                th:replace="~{fragments/header_fragment :: headFragment(category='Помощь')}"></ul>-->
             <h1 class="Middle-title">Помощь
             </h1>
             <div class="FAQ">
