--- a/src/main/resources/spring-frontend/documents/index.html
+++ b/src/main/resources/spring-frontend/documents/index.html
@@ -62,7 +62,7 @@
         </main>
     </div>
 </div>
-<footer class="Footer" th:replace="~{fragments/common_footer_fragment :: footer}"></footer>
+<footer class="Footer" th:replace="~{fragments/footer_fragment :: footFragment}"></footer>
 <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
 </body>
 </html>
