--- a/src/main/resources/spring-frontend/index.html
+++ b/src/main/resources/spring-frontend/index.html
@@ -50,7 +50,7 @@ p.error-browser
                     </h2>
                 </div>
                 <div class="Slider Slider_carousel">
-                    <div class="Slider-box Cards">
+                    <div class="Slider-box Cards" data-load="recommended" data-loadoffset="0" data-loadlimit="20">
                         <div class="Slider-item" th:each="book : ${recommendedBooks}">
                             <div class="Slider-content">
                                 <div class="Card"><a class="Card-picture" href="/books/slug.html"><img
