--- a/src/main/resources/spring-frontend/index.html
+++ b/src/main/resources/spring-frontend/index.html
@@ -50,11 +50,12 @@ p.error-browser
                     </h2>
                 </div>
                 <div class="Slider Slider_carousel">
-                    <div class="Slider-box Cards" data-load="recommended" data-loadoffset="0" data-loadlimit="20">
+                    <div class="Slider-box Cards" data-load="recommended" data-loadoffset="0" data-loadlimit="6">
+<!--                                            //data-load="recommended" data-loadoffset="0" data-loadlimit="20">-->
                         <div class="Slider-item" th:each="book : ${recommendedBooks}">
                             <div class="Slider-content">
                                 <div class="Card"><a class="Card-picture" href="/books/slug.html"><img
-                                        src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                                        th:src="${book.image}" alt="card.jpg"/></a>
                                     <div class="Card-content">
                                         <strong class="Card-title"><a href="#"
                                                                       th:text="${book.title}">Техника</a>
