--- a/src/main/resources/spring-frontend/search/index.html
+++ b/src/main/resources/spring-frontend/search/index.html
@@ -17,7 +17,7 @@
     <script defer src="/assets/js/scripts.min.js?v=33498857"></script>
 </head>
 <body class="Site">
-<header class="Header" th:replace="~{fragments/common_header_fragment :: head(status='unauthorized')}"></header>
+<header th:replace="~{fragments/header_fragment :: headFragment}"></header>
 <div class="Middle Middle_search">
     <div class="wrap">
         <main class="Middle-main">
@@ -25,9 +25,12 @@
             </h1>
             <div class="Section">
                 <div class="search">
-                    <form class="form form_search" action="#" method="post" data-searchlimit="20">
+                    <form class="form form_search" action="#" method="post" data-searchlimit="20"
+                          th:object="${searchWordDto}">
                         <input class="search-input" id="querypage" name="querypage" type="text"
-                               placeholder="Search over 30 million book titles" value="Техника"/>
+                               placeholder="Search over 30 million book titles"
+                               th:field="*{example}"
+                               value="Техника"/>
                         <button class="search-button" type="submit" name="searchpage" id="searchpage">Поиск
                         </button>
                     </form>
@@ -39,12 +42,12 @@
                     </h2>
                 </header>
                 <div class="Cards Cards_refresh"
-                     th:replace="~{fragments/books_pool_fragment :: pool(category='search')}"></div>
+                     th:replace="~{fragments/books_pool_fragment :: cardFragment}"></div>
             </div>
         </main>
     </div>
 </div>
-<footer class="Footer" th:replace="~{fragments/common_footer_fragment :: footer}"></footer>
+<footer th:replace="~{fragments/footer_fragment :: footFragment}" ></footer>
 <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
 </body>
 </html>
