--- a/src/main/resources/spring-frontend/search/index.html
+++ b/src/main/resources/spring-frontend/search/index.html
@@ -38,12 +38,36 @@
             </div>
             <div class="Section Section_close">
                 <header class="Section-header">
-                    <h2 class="Section-title Middle-searchHeader">Найдено 40 книг
+                    <h2 class="Section-title Middle-searchHeader"
+                        th:text="${'Найдено книг: ' + searchResults.size()}">Найдено 40 книг
                     </h2>
                 </header>
-                <div class="Cards Cards_refresh"
-                     th:replace="~{fragments/books_pool_fragment :: cardFragment}"></div>
+                <div class="Cards Cards_search Cards_refresh">
+                    <div class="Card" th:each="book : ${searchResults}">
+                        <div class="Card-picture"><a href="#"><img  th:src="${book.image}"
+                                                                    src="/assets/img/content/main/card.jpg"
+                                                                    alt="card.jpg"/></a>
+                        </div>
+                        <div class="Card-content">
+                            <strong class="Card-title"><a href="#" th:text="${book.title}">Техника</a>
+                            </strong>
+                            <div class="Card-description" th:text="${book.description}">Кондратенко Александр Петрович
+                            </div>
+                            <div class="Card-cost"><span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span><span
+                                    class="Card-price" th:text="${book.price}">₽190.00</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#"
+                                                                     data-refreshshow="search" data-refreshoffset="0"
+                                                                     data-refreshlimit="5"
+                                                                     th:attr="data-refreshquery=${searchWordDto.example}"
+                                                                     data-refreshquery="Техника">Показать еще</a>
+                    </div>
+                </div>
             </div>
+<!--                     th:replace="~{fragments/books_pool_fragment :: cardFragment}"></div>-->
+<!--            </div>-->
         </main>
     </div>
 </div>
