--- a/src/main/resources/spring-frontend/books/popular.html
+++ b/src/main/resources/spring-frontend/books/popular.html
@@ -10,6 +10,7 @@
 <html class="ie9" lang="ru">
 <![endif]-->
 <!--[if gt IE 9]><!--> <html lang="ru"> <!--<![endif]-->
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Тут название страницы написать</title>
   <meta name="description" content="Описание страницы">
@@ -57,19 +58,25 @@
             </h1>
           </div>
           <div class="Cards Cards_refresh">
-            <div class="Card" th:replace="~{fragments/books_pool_fragment :: cardFragment}">
-              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+            <div class="Card"   th:each="book : ${popularBooks}">
+              <div class="Card-picture"><a href="#"><img th:src="${book.image}"
+                                                         src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
               </div>
               <div class="Card-content">
-                <strong class="Card-title"><a href="#" >Техника</a>
+                <strong class="Card-title"><a href="#" th:text="${book.title}">Техника</a>
                 </strong>
-                <div class="Card-description">Кондратенко Александр Петрович
+                <div class="Card-description" th:text="${book.description}">Кондратенко Александр Петрович
                 </div>
-                <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
+                <div class="Card-cost"><span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span><span
+                        class="Card-price" th:text="${book.price}">₽190.00</span>
                 </div>
               </div>
             </div>
-            <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#" data-refreshshow="popular" data-refreshoffset="20" data-refreshlimit="20">Показать еще</a>
+            <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#"
+                                                             data-refreshshow="recent" data-refreshoffset="20"
+                                                             data-refreshlimit="20"
+                                                             th:attr="data-refreshquery=${bookPageDto.getBooks()}"
+            >Показать еще</a>
             </div>
           </div>
         </div>
