--- a/src/main/resources/spring-frontend/index.html
+++ b/src/main/resources/spring-frontend/index.html
@@ -51,7 +51,7 @@ p.error-browser
                 </div>
                 <div class="Slider Slider_carousel">
                     <div class="Slider-box Cards" data-load="recommended" data-loadoffset="0" data-loadlimit="6">
-<!--                                            //data-load="recommended" data-loadoffset="0" data-loadlimit="20">-->
+                        <!--                                            //data-load="recommended" data-loadoffset="0" data-loadlimit="20">-->
                         <div class="Slider-item" th:each="book : ${recommendedBooks}">
                             <div class="Slider-content">
                                 <div class="Card"><a class="Card-picture" href="/books/slug.html"><img
@@ -155,109 +155,15 @@ p.error-browser
             <h2 class="Middle-title">Книги по тегам
             </h2>
             <div class="Tags" id="tags">
-                <div class="Tag Tag_xs"><a href="/tags/index.html">современная литература</a>
-                </div>
-                <div class="Tag Tag_sm"><a href="/tags/index.html">классическая литература</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">зарубежная литература</a>
-                </div>
-                <div class="Tag Tag_md"><a href="/tags/index.html">фэнтези</a>
-                </div>
-                <div class="Tag Tag_lg"><a href="/tags/index.html">английская литература</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">русская литература</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">американская литература</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">фантастика</a>
-                </div>
-                <div class="Tag Tag_md"><a href="/tags/index.html">детская литература</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">детектив</a>
-                </div>
-                <div class="Tag Tag_sm"><a href="/tags/index.html">любовь</a>
-                </div>
-                <div class="Tag Tag_sm"><a href="/tags/index.html">мистика</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">юмор</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">приключения</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">сказка</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">французская литература</a>
-                </div>
-                <div class="Tag Tag_xs"><a href="/tags/index.html">англия</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">художественная литература</a>
-                </div>
-                <div class="Tag Tag_xs"><a href="/tags/index.html">психология</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">философия</a>
-                </div>
-                <div class="Tag Tag_lg"><a href="/tags/index.html">экранизировано</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">любимое</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">антиутопия</a>
-                </div>
-                <div class="Tag Tag_xs"><a href="/tags/index.html">books you must read before you die</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">роман</a>
-                </div>
-                <div class="Tag Tag_md"><a href="/tags/index.html">франция</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">дайте две</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">young adult</a>
-                </div>
-                <div class="Tag Tag_lg"><a href="/tags/index.html">война</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">история</a>
-                </div>
-                <div class="Tag Tag_sm"><a href="/tags/index.html">флэшмоб 2016</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">детство</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">жизнь</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">драма</a>
-                </div>
-                <div class="Tag Tag_md"><a href="/tags/index.html">россия</a>
-                </div>
-                <div class="Tag Tag_md"><a href="/tags/index.html">книжное путешествие</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">советская литература</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">триллер</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">америка</a>
-                </div>
-                <div class="Tag Tag_sm"><a href="/tags/index.html">немецкая литература</a>
-                </div>
-                <div class="Tag Tag_xs"><a href="/tags/index.html">вампиры</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">школьная программа</a>
-                </div>
-                <div class="Tag Tag_xs"><a href="/tags/index.html">рассказы</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">магия</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">дети</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">русская классика</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">флэшмоб 2015</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">биография</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">english</a>
+                <div class="Tag Tag_xs" th:each="tagsList : ${tags}">
+                    <a href="/tags/index.html" th:href="@{/tags/(tag=${tagsList})}" th:text="${tagsList}">современная литература</a>
+<!--                    <a th:href="@{/index(param1='value1',param2='value2')}">-->
                 </div>
             </div>
         </main>
     </div>
 </div>
-<footer th:replace="~{fragments/footer_fragment :: footFragment}" ></footer>
+<footer th:replace="~{fragments/footer_fragment :: footFragment}"></footer>
 <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
 <!--+menu(-->
 <!--    'Это раз',-->
