--- a/src/main/resources/spring-frontend/books/slug.html
+++ b/src/main/resources/spring-frontend/books/slug.html
@@ -9,7 +9,7 @@
 <!--[if IE 9]>
 <html class="ie9" lang="ru">
 <![endif]-->
-<!--[if gt IE 9]><!--> <html lang="ru"> <!--<![endif]-->
+<html lang="ru" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
 <head>
   <title>Тут название страницы написать</title>
   <meta name="description" content="Описание страницы">
@@ -40,7 +40,7 @@
           | браузера здесь&nbsp;
       | для правильного отображения сайта.
   -->
-  <footer th:replace="~{fragments/footer_fragment :: footFragment}" ></footer>
+  <header th:replace="~{fragments/header_fragment :: headFragment}"></header>
   <div class="Middle">
     <div class="wrap">
       <main class="Middle-main">
@@ -49,20 +49,25 @@
           </li>
           <li class="breadcrumbs-item"><a href="/genres/index.html">Книги</a>
           </li>
-          <li class="breadcrumbs-item breadcrumbs-item_current"><span>Мара и морок</span>
+          <li class="breadcrumbs-item breadcrumbs-item_current" th:text="${slugBook?.title}"><span>Мара и морок</span>
           </li>
         </ul>
         <div class="Product">
           <div class="ProductCard">
-            <div class="ProductCard-look">
-              <div class="ProductCard-photo"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
+            <form id="imgForm" method="POST" enctype="multipart/form-data" action="#"
+                  th:action="${'/books/'+ slugBook?.slug +'/img/save'}">
+              <div class="ProductCard-photo" id="uploadButton"><img th:src="${slugBook?.image}"
+                                                                    src="/assets/img/content/main/card.jpg"
+                                                                    alt="card.jpg"/>
               </div>
-            </div>
+              <input type="file" name="file" id="dialog" style="display: none"/>
+            </form>
             <div class="ProductCard-desc">
               <div class="ProductCard-header">
-                <h1 class="ProductCard-title">Мара и морок
+                <h1 class="ProductCard-title" th:text="${slugBook?.title}">Мара и морок
                 </h1>
-                <div class="ProductCard-author"><span class="ProductCard-titleProp">Автор:</span>&#32;<a href="#">Лия Арден</a>
+                <div class="ProductCard-author"><span class="ProductCard-titleProp">Автор:</span>&#32;<a
+                        href="#" th:text="${slugBook?.author?.toString()}">Лия Арден</a>
                 </div>
                 <div class="ProductCard-rating"><span class="ProductCard-titleProp">Рейтинг:</span>
                   <button class="trigger trigger_dropdown" type="button">
@@ -332,7 +337,8 @@
                 </div>
                 <div class="ProductCard-tags"><span class="ProductCard-titleProp">Тэги:</span><a href="/tags/">Современные</a>,&#32;<a href="/tags/">Психологическая проза</a>
                 </div>
-                <div class="ProductCard-cost"><span class="ProductCard-titleProp">Цена:</span><span class="ProductCard-priceOld">₽300</span><span class="ProductCard-price">₽180</span>
+                <div class="ProductCard-cost"><span class="ProductCard-titleProp" th:text="${slugBook?.priceOld}">Цена:</span>
+                  <span class="ProductCard-priceOld">₽300</span><span class="ProductCard-price" th:text="${slugBook?.discountPrice()}">₽180</span>
                 </div>
                 <!--+div.-info
                 //+div.-cost
@@ -344,7 +350,7 @@
                 -->
               </div>
               <div class="ProductCard-text">
-                <p>Таких, как я, называют Марами - отмеченными самой богиней смерти Мораной. Когда-то у меня и моих шести сестер был свой путь. Тогда люди нас уважали и просили о милосердии. Они приносили нам подношения и молились нам. Но 200 лет назад все изменилось, когда принц Серата осмелился поднять руку на одну из нас. Я пыталась отомстить, но погибли мы все. Теперь правители Аракена, погрязшие в длительной войне со своим соседом Сератом, решили вернуть меня к жизни. Дать второй шанс на месть и свободу, привязав меня к тому, против кого я никогда не пойду. Таких, как он, называют Морок, и их боятся абсолютно все.
+                <p th:text="${slugBook?.description}">Таких, как я, называют Марами - отмеченными самой богиней смерти Мораной. Когда-то у меня и моих шести сестер был свой путь. Тогда люди нас уважали и просили о милосердии. Они приносили нам подношения и молились нам. Но 200 лет назад все изменилось, когда принц Серата осмелился поднять руку на одну из нас. Я пыталась отомстить, но погибли мы все. Теперь правители Аракена, погрязшие в длительной войне со своим соседом Сератом, решили вернуть меня к жизни. Дать второй шанс на месть и свободу, привязав меня к тому, против кого я никогда не пойду. Таких, как он, называют Морок, и их боятся абсолютно все.
                 </p>
               </div>
               <div class="ProductCard-cart">
@@ -520,63 +526,8 @@
       </main>
     </div>
   </div>
-  <footer class="Footer">
-    <div class="wrap">
-      <div class="row Footer-main">
-        <div class="row-block"><a class="logo logo_footer Footer-logo" href="/"><img class="logo-image" src="/assets/img/logo_footer.png" alt="logo_footer.png"/><span class="logo-text">BOOKSHOP</span></a>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincid  unt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-          </p>
-          <ul class="menu menu_img menu_smallImg Footer-menuSoc">
-            <li class="menu-item"><a class="menu-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="15" viewBox="0 0 14 15"><g><g opacity=".5"><path fill="#fff" d="M13.769 2.963c0-1.193-1.076-2.269-2.267-2.269h-9.07C1.24.694.164 1.77.164 2.964v9.068c0 1.191 1.076 2.267 2.268 2.267h4.535V9.16H5.304V6.892h1.663v-.884c0-1.523 1.144-2.895 2.55-2.895h1.833V5.38H9.517c-.2 0-.434.245-.434.61v.902h2.267V9.16H9.083v5.14h2.419c1.191 0 2.267-1.077 2.267-2.268z"/></g></g></svg></a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" viewBox="0 0 18 12"><g><g opacity=".5"><path fill="#fff" d="M15.986 5.34c.965-.078 1.62-.518 1.872-1.113-.348.214-1.429.447-2.026.225a7.483 7.483 0 0 0-.093-.394c-.455-1.669-2.012-3.013-3.643-2.851.132-.053.266-.103.4-.147.179-.065 1.232-.236 1.066-.608-.14-.326-1.426.248-1.669.322.32-.12.85-.326.906-.695-.49.068-.971.3-1.343.637a.926.926 0 0 0 .258-.511c-1.307.836-2.071 2.52-2.689 4.152-.485-.47-.915-.84-1.3-1.047-1.083-.58-2.377-1.185-4.408-1.94-.063.673.332 1.566 1.47 2.16-.247-.033-.698.041-1.058.127.147.77.626 1.405 1.924 1.71-.593.04-.9.175-1.178.467.27.534.93 1.164 2.115 1.035-1.318.569-.537 1.62.535 1.463-1.83 1.89-4.715 1.75-6.371.172 4.325 5.892 13.728 3.484 15.13-2.194 1.049.01 1.666-.363 2.049-.772-.605.102-1.482-.004-1.947-.198z"/></g></g></svg></a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><g><g opacity=".5"><path fill="#fff" d="M15.375 1.809v13.063c0 .604-.504 1.093-1.127 1.093H1.251c-.622 0-1.126-.488-1.126-1.093V1.81C.125 1.205.629.716 1.25.716h12.997c.623 0 1.127.489 1.127 1.093zM4.748 6.596H2.444v6.885h2.304zm.15-2.13c-.014-.676-.5-1.19-1.287-1.19-.788 0-1.304.514-1.304 1.19 0 .66.5 1.19 1.274 1.19h.015c.803 0 1.303-.53 1.303-1.19zm8.156 5.067c0-2.116-1.137-3.1-2.653-3.1-1.223 0-1.77.67-2.076 1.138v-.975H6.022c.03.646 0 6.885 0 6.885h2.303V9.635c0-.206.015-.41.077-.558.166-.411.544-.837 1.182-.837.833 0 1.166.631 1.166 1.557v3.684h2.304zM8.31 7.594c.003-.007.009-.014.014-.023v.023z"/></g></g></svg></a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="17" viewBox="0 0 14 17"><g><g opacity=".5"><path fill="#fff" d="M7.283.65C2.807.65.55 3.86.55 6.535c0 1.62.614 3.063 1.93 3.6.215.088.409.003.472-.236.043-.165.146-.582.192-.757.063-.235.039-.318-.136-.524-.379-.448-.622-1.028-.622-1.849 0-2.38 1.782-4.512 4.64-4.512 2.53 0 3.92 1.546 3.92 3.61 0 2.717-1.203 5.01-2.987 5.01-.986 0-1.724-.813-1.487-1.815.283-1.193.831-2.481.831-3.343 0-.771-.414-1.415-1.27-1.415-1.008 0-1.817 1.043-1.817 2.44 0 .889.3 1.491.3 1.491L3.303 13.37c-.36 1.523-.054 3.392-.028 3.579.015.112.159.14.224.054.092-.12 1.293-1.603 1.7-3.084.116-.419.663-2.59.663-2.59.328.626 1.285 1.175 2.302 1.175 3.03 0 5.084-2.76 5.084-6.457 0-2.794-2.367-5.397-5.965-5.397z"/></g></g></svg></a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="12" viewBox="0 0 16 12"><g><g opacity=".5"><path fill="#fff" d="M.745 2.672C.429 2.25.27 1.857.27 1.495c0-.449.12-.823.358-1.122.239-.3.58-.449 1.023-.449h12.698c.373 0 .697.136.97.406s.41.595.41.974c0 .455-.14.889-.423 1.303a4.102 4.102 0 0 1-1.052 1.061l-4.037 2.803-.367.264a9.616 9.616 0 0 1-.914.608c-.176.103-.341.181-.496.233-.156.051-.3.078-.432.078h-.017c-.132 0-.276-.027-.431-.078a2.667 2.667 0 0 1-.496-.233 9.256 9.256 0 0 1-.915-.608l-.366-.264c-.524-.367-1.277-.892-2.26-1.573a555.686 555.686 0 0 1-1.769-1.23 4.256 4.256 0 0 1-1.01-.996zM15.729 3.84v6.849c0 .38-.135.704-.405.975-.27.27-.596.406-.975.406H1.65c-.38 0-.705-.135-.975-.406a1.33 1.33 0 0 1-.406-.975V3.84c.253.283.544.533.872.751 2.082 1.415 3.51 2.407 4.287 2.976.328.242.594.43.798.565.204.136.476.273.815.415.34.14.656.211.949.211h.017c.294 0 .61-.07.95-.211.339-.142.61-.279.814-.415.205-.135.47-.323.798-.565.978-.707 2.41-1.699 4.296-2.976a4.76 4.76 0 0 0 .863-.75z"/></g></g></svg></a>
-            </li>
-          </ul>
-        </div>
-        <div class="row-block">
-          <ul class="menu menu_vt Footer-menu">
-            <li class="menu-item"><a class="menu-link" href="/index.html">Главная</a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="/genres/index.html">Жанры</a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="/authors/index.html">Авторы</a>
-            </li>
-          </ul>
-        </div>
-        <div class="row-block">
-          <ul class="menu menu_vt Footer-menu">
-            <li class="menu-item"><a class="menu-link" href="/signin.html">Войти</a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="/documents/index.html">Документы</a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="/about.html">О компании</a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="/faq.html">Помощь</a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="/contacts.html">Контакты</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="Footer-copy">
-      <div class="wrap">© 2016 Bookshop Pty Ltd. ALL RIGHTS RESERVED
-      </div>
-    </div>
-    <div id="err_dialog" title="Грамота">
-      <p>Такое могут делать только авторизованные пользователи. 🤔</p>
-    </div>
-  </footer>
+  <footer th:replace="~{fragments/footer_fragment :: footFragment}"></footer>
   <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
+  <script src="/assets/js/UploadNewBookImageScript.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </body></html>
