--- a/src/main/resources/spring-frontend/index.html
+++ b/src/main/resources/spring-frontend/index.html
@@ -54,10 +54,12 @@ p.error-browser
                         <!--                                            //data-load="recommended" data-loadoffset="0" data-loadlimit="20">-->
                         <div class="Slider-item" th:each="book : ${recommendedBooks}">
                             <div class="Slider-content">
-                                <div class="Card"><a class="Card-picture" href="/books/slug.html"><img
+                                <div class="Card"><a class="Card-picture" th:href="@{'/books/' + ${book.slug}}"
+                                                     href="/books/slug.html"><img
                                         th:src="${book.image}" alt="card.jpg"/></a>
                                     <div class="Card-content">
                                         <strong class="Card-title"><a href="#"
+                                                                      th:href="@{'/books/' + ${book.slug}}"
                                                                       th:text="${book.title}">Техника</a>
                                         </strong>
                                         <div class="Card-description" th:text="${book.author}">Кондратенко Валерий
@@ -65,7 +67,8 @@ p.error-browser
                                         </div>
                                         <div class="Card-cost">
                                             <span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span>
-                                            <span class="Card-price" th:text="${book.price}">₽190.00</span>
+                                            <span class="Card-price"
+                                                  th:text="${'₽' + book.discountPrice()}">₽190.00</span>
                                         </div>
                                     </div>
                                 </div>
@@ -100,7 +103,8 @@ p.error-browser
                                         </div>
                                         <div class="Card-cost">
                                             <span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span>
-                                            <span class="Card-price" th:text="${book.price}">₽190.00</span>
+                                            <span class="Card-price"
+                                                  th:text="${'₽' + book.discountPrice()}">₽190.00</span>
                                         </div>
                                     </div>
                                 </div>
@@ -135,7 +139,8 @@ p.error-browser
                                         </div>
                                         <div class="Card-cost">
                                             <span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span>
-                                            <span class="Card-price" th:text="${book.price}">₽190.00</span>
+                                            <span class="Card-price"
+                                                  th:text="${'₽' + book.discountPrice()}">₽190.00</span>
                                         </div>
                                     </div>
                                 </div>
@@ -156,8 +161,9 @@ p.error-browser
             </h2>
             <div class="Tags" id="tags">
                 <div class="Tag Tag_xs" th:each="tagsList : ${tags}">
-                    <a href="/tags/index.html" th:href="@{/tags/(tag=${tagsList})}" th:text="${tagsList}">современная литература</a>
-<!--                    <a th:href="@{/index(param1='value1',param2='value2')}">-->
+                    <a href="/tags/index.html" th:href="@{/tags/(tag=${tagsList})}" th:text="${tagsList}">современная
+                        литература</a>
+                    <!--                    <a th:href="@{/index(param1='value1',param2='value2')}">-->
                 </div>
             </div>
         </main>
