--- a/src/main/resources/spring-frontend/books/slug.html
+++ b/src/main/resources/spring-frontend/books/slug.html
@@ -66,7 +66,7 @@
               <div class="ProductCard-header">
                 <h1 class="ProductCard-title" th:text="${slugBook?.title}">Мара и морок
                 </h1>
-                <div class="ProductCard-author"><span class="ProductCard-titleProp">Автор:</span>&#32;<a
+                <div class="ProductCard-author"><span class="ProductCard-titleProp">Автор:</span><a
                         href="#" th:text="${slugBook?.author?.toString()}">Лия Арден</a>
                 </div>
                 <div class="ProductCard-rating"><span class="ProductCard-titleProp">Рейтинг:</span>
