feat: handler exceptions

--- a/src/main/resources/spring-frontend/books/slug.html
+++ b/src/main/resources/spring-frontend/books/slug.html
@@ -63,7 +63,7 @@ p.error-browser
                                                                               src="/assets/img/content/main/card.jpg"
                                                                               alt="card.jpg"/>
                         </div>
-                        <input type="file" name="file" id="dialog" style="display: none"/>
+                        <input type="file" name="file" id="dialog" style="display: none" accept="image/*"/>
                     </form>
                     <div class="ProductCard-desc">
                         <div class="ProductCard-header">
