--- a/src/main/resources/spring-frontend/books/slug.html
+++ b/src/main/resources/spring-frontend/books/slug.html
@@ -418,7 +418,8 @@ p.error-browser
                             <!--+div.-cartElement.-cartElement_amount-->
                             <!--    +Amount._product-->
                             <div class="ProductCard-cartElement">
-                                <button class="btn btn_primary btn_outline" data-sendstatus="KEPT" data-bookid="[1111]"
+                                <button class="btn btn_primary btn_outline" data-sendstatus="KEPT"
+                                        data-bookid="[]" th:attr="data-bookid = ${'postponed/' + slugBook?.slug}"
                                         data-btntype="check" data-btnradio="buyblock" data-check="false"
                                         data-alttext="Отложена"><span class="btn-icon"><img
                                         src="/assets/img/icons/heart.svg" alt="heart.svg"/></span><span
@@ -426,11 +427,12 @@ p.error-browser
                                 </button>
                             </div>
                             <div class="ProductCard-cartElement">
-                                <button class="btn btn_primary btn_outline" data-sendstatus="CART" data-bookid="[1111]"
-                                        data-btntype="check" data-btnradio="buyblock" data-check="false"
-                                        data-alttext="В корзине"><span class="btn-icon"><img
-                                        src="/assets/img/icons/shopping-basket.svg"
-                                        alt="shopping-basket.svg"/></span><span class="btn-content">Купить</span>
+                                <button class="btn btn_primary btn_outline" data-sendstatus="CART"
+                                        data-bookid="[]" th:attr="data-bookid = ${'cart/'+ slugBook?.slug}"
+                                        data-btntype="check" data-btnradio="buyblock"
+                                        data-check="false" data-alttext="В корзине"><span class="btn-icon">
+                                    <img src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/>
+                                     </span><span class="btn-content">Купить</span>
                                 </button>
                             </div>
                         </div>
