feat: postponed button

--- a/src/main/resources/spring-frontend/books/slug.html
+++ b/src/main/resources/spring-frontend/books/slug.html
@@ -419,7 +419,7 @@ p.error-browser
                             <!--    +Amount._product-->
                             <div class="ProductCard-cartElement">
                                 <button class="btn btn_primary btn_outline" data-sendstatus="KEPT"
-                                        data-bookid="[]" th:attr="data-bookid = ${'postponed/' + slugBook?.slug}"
+                                        data-bookid="[123]" th:attr="data-bookid = ${'postponed/' + slugBook?.slug}"
                                         data-btntype="check" data-btnradio="buyblock" data-check="false"
                                         data-alttext="Отложена"><span class="btn-icon"><img
                                         src="/assets/img/icons/heart.svg" alt="heart.svg"/></span><span
@@ -428,7 +428,7 @@ p.error-browser
                             </div>
                             <div class="ProductCard-cartElement">
                                 <button class="btn btn_primary btn_outline" data-sendstatus="CART"
-                                        data-bookid="[]" th:attr="data-bookid = ${'cart/'+ slugBook?.slug}"
+                                        data-bookid="[123]" th:attr="data-bookid = ${'cart/'+ slugBook?.slug}"
                                         data-btntype="check" data-btnradio="buyblock"
                                         data-check="false" data-alttext="В корзине"><span class="btn-icon">
                                     <img src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/>
