feat: book comment

--- a/src/main/resources/spring-frontend/books/slug.html
+++ b/src/main/resources/spring-frontend/books/slug.html
@@ -338,9 +338,7 @@ p.error-browser
                             </div>
                             <div class="ProductCard-assessment"><span
                                     class="ProductCard-titleProp">Оцените книгу:</span><span class="Rating Rating_input"
-                                                                                             data-bookid="2121"
-                                                                                             th:attr="data-bookid = ${'rate/'+ slugBook?.slug}"
-                            ><span
+                                                                                             data-bookid="2121"><span
                                     class="Rating-stars"><span class="Rating-star">
                         <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
                           <g>
